KYLIN-1708 tip enhancement, remove illegal character

--- a/webapp/app/partials/modelDesigner/conditions_settings.html
+++ b/webapp/app/partials/modelDesigner/conditions_settings.html
@@ -168,18 +168,17 @@
     </ol>
 </script>
 
-<script type="text/ng-template" id="partitionTimeTip.html">  
+<script type="text/ng-template" id="partitionTimeTip.html">
   <p>Column should contain time value (type can be Timestamp, String, VARCHAR, etc.)</p>
 </script>
 
-<script typ type="text/ng-template" id="filterTip.html">  
+<script type="text/ng-template" id="filterTip.html">
     <ol>
       <li>Where clause to filter data from source</li>
       <li>Do not include date column which will be used for incremental refresh</li>
       <li>Do not include "Where"</li>
     </ol>
 </script>
-
-<script type="text/ng-template" id="separateTimeColumnTip.html">  
-<p>For cases where fact table saves date and hour at two columns (KYLIN-1427)</p>
+<script type="text/ng-template" id="separateTimeColumnTip.html">
+  <p>For cases where fact table saves date and hour at two columns (KYLIN-1427)</p>
 </script>
