UI minor format update

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -825,3 +825,10 @@ input:-moz-placeholder {
   line-height: 1.428571429;
   background-color: #ffffff;
 }
+pre {
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+}
