minor GUI pre style update & logout js error fix

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -646,3 +646,10 @@ input:-moz-placeholder {
 .dropdown-menu{
   z-index:9999;
 }
+pre {
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+}
