KYLIN-1669 Deprecate the "Capacity" field from DataModel

--- a/webapp/app/partials/modelDesigner/model_dimensions.html
+++ b/webapp/app/partials/modelDesigner/model_dimensions.html
@@ -50,7 +50,7 @@
             </table>
         </div>
         <div  ng-if="state.mode=='edit'" class="form-group model-dimension-edit" style="width: 100%">
-            <h4 style="margin-left:42px">Dimensions</h4>
+            <h4 style="margin-left:42px">Select dimension columns</h4>
             <table style="margin-left:42px; width:92%"
                    ng-if="modelsManager.selectedModel.dimensions.length > 0"
                    class="table table-hover list">
