--- a/webapp/app/partials/modelDesigner/model_measures.html
+++ b/webapp/app/partials/modelDesigner/model_measures.html
@@ -41,7 +41,7 @@
         </tbody>
     </table>
     <div  ng-if="state.mode=='edit'" class="form-group" style="width: 100%">
-        <h3 class="box-title">Select your measures</h3>
+        <h3 class="box-title">Select measure columns</h3>
 
       <ui-select
         close-on-select="false"
