minor, make UI label consistent

--- a/webapp/app/partials/modelDesigner/model_measures.html
+++ b/webapp/app/partials/modelDesigner/model_measures.html
@@ -41,8 +41,7 @@
         </tbody>
     </table>
     <div  ng-if="state.mode=='edit'" class="form-group" style="width: 100%">
-        <h3 class="box-title">Select measure columns</h3>
-
+        <h4 style="margin-left:42px">Select measure columns</h4>
       <ui-select
         close-on-select="false"
         ng-if="state.mode=='edit'"
